<?xml version="1.0"?>
<package format="2">
  <name>eager_robot_vx300s</name>
  <version>0.0.0</version>
  <description>The eager_robot_vx300s package</description>

  <maintainer email="jelleluijkx@tudelft.nl">jdluijkx</maintainer>

  <license>Apache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>interbotix_xsarm_descriptions</exec_depend>
  <exec_depend>interbotix_xsarm_gazebo</exec_depend>
  <exec_depend>interbotix_xsarm_moveit</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>

</package>
