<?xml version="1.0"?>
<package format="2">
  <name>ros_gym_bridge_gazebo</name>
  <version>0.0.0</version>
  <description>The ros_gym_bridge_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="j.d.luijkx@tudelft.nl">Jelle Luijkx</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_gym_core</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>ros_gym_core</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>ros_gym_core</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
